# qa_generator

./: .gitignore  README.md  main.py  pyproject.toml
config/: app_config.py  logging_config.py  settings.py
core/: client.py  prompt_manager.py  registry.py
core/generators/: __init__.py  base.py  cot.py  cot_generator.py  dataset_generator.py  multi_turn.py  multi_turn_generator.py  single_turn.py  single_turn_generator.py
core/handlers/: file_handler.py
core/handlers/llm/: __init__.py  base_handler.py  claude_handler.py  gemini_handler.py  openai_handler.py
core/processors/: __init__.py  response_processor.py
prompts/cot/: prompt.md  schema.json
prompts/multi_turn/: prompt.md
prompts/multiturn/: prompt.md  schema.json
prompts/partials/: _self_correction_prompt.md  _system_prompt.md
prompts/single_turn/: prompt.md
prompts/singleturn/: instructions.txt  prompt.md  schema.json
schemas/: datasets.py  qa_models.py
templates/multi_turn/: schema.json
templates/partials/: _metadata_rules.md  _qa_answer_rules.md
tests/core/handlers/: __init__.py
tests/core/handlers/llm/: __init__.py
